# headjack

./: .gitignore  Cargo.toml  README.md  test.bat
.github/workflows/: release.yml
src/: app.rs  brain.rs  event.rs  handler.rs  lib.rs  main.rs  sampler3d.rs  tui.rs  ui.rs
src/utils/: argminmax2.rs  brain_volume.rs  colors.rs  metadata.rs  mod.rs  sampler3d.rs  sampling.rs  slice_cache.rs
src/widgets/: color_bar.rs  key_value_list_widget.rs  mod.rs  slice_widget.rs  title_bar.rs
